--- a/marax-probe/values.h.template
+++ b/marax-probe/values.h.template
@@ -8,4 +8,4 @@ const int mqtt_port = 8883;
 const char* mqtt_user = "username";
 const char* mqtt_pass = "secret";
 
-const char* topic = "topicprefix";
+const char* topic = "topic-prefix";
